# phicomm-r1-voice-assistant

./: .gitignore  README.md
android-app/: local.properties.example  settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/java/com/mgt/r1voice/: AudioRecorder.java  MainActivity.java  VoiceService.java  WakeWordDetector.java  WsClient.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mgt/r1voice/: AudioPlayer.java  BootReceiver.java  LedController.java  VoiceService.java  WakeWordDetector.java  WsClient.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
server/: config.py  kws.py  main.py  pipeline.py  pyproject.toml  run.sh  server.py  test_suite.py  vad.py  vad_silero.py  wake_word.py
