[project]
name = "r1-voice-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "edge-tts>=7.2.8",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "pyyaml>=6.0.3",
    "sherpa-onnx>=1.13.4",
    "silero-vad>=6.2.1",
    "websockets>=16.0",
]
